--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <link rel="icon" href="/icons/favicon/favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/icons/favicon/favicon.svg" sizes="any" type="image/svg+xml">
+    <title>Oleg Oleinik</title>
 </head>
 <body>
     <div id="root"></div>
